--- a/astro-tutorial-blog/src/pages/index.astro
+++ b/astro-tutorial-blog/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import Navigation from "../components/Navigation.astro"
-import '../styles/global.css';
+import Footer from "@/components/Footer.astro";
+import Navigation from "@/components/Navigation.astro";
+import "@/styles/global.css";
 
 const pageTitle = "Home Page";
 ---
@@ -16,5 +17,6 @@ const pageTitle = "Home Page";
   <body>
     <Navigation />
     <h1>{pageTitle}</h1>
+    <Footer />
   </body>
 </html>
